test/files/neg/byname-implicits-16.check
byname-implicits-16.scala:14: error: diverging implicit expansion for type Test.O[Test.Z]
starting with method expande in object Expand
  implicitly[O[Z]]
            ^
one error found
